Fix uneven padding

--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ a:hover {
   text-align: right;
 }
 
-#releases div:after {
+#releases > div:after {
   content: '';
   clear: both;
   display: block;
@@ -84,13 +84,13 @@ a:hover {
   grid-template-columns: auto auto;
 }
 
-#staff .members div:nth-child(odd) {
+#staff .members > div:nth-child(odd) {
   text-align: right;
-  padding-right: 1em;
+  padding-right: calc(1em + 2px);
   border-right: 2px solid #FFF;
 }
 
-#staff .members div:nth-child(even) {
+#staff .members > div:nth-child(even) {
   text-align: left;
   padding-left: 1em;
 }
